k8s/policies/gatekeeper/templates/k8srequiredlimits-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLimits
      validation:
        openAPIV3Schema:
          properties:
            limits:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlimits

        violation[{
          "msg": msg,
          "details": {"missing_limits": missing}
        }] {
          provided := {key | key := input.review.object.spec.template.spec.containers[_].resources.limits[_]}
          required := {limit | limit := input.parameters.limits[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("missing required limits: %v", [missing])
        }
